[gd_scene load_steps=10 format=2]

[ext_resource path="res://Candy Display Row UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Kid.gd" type="Script" id=2]
[ext_resource path="res://UI/Kid Bubble/Kid Want List.png" type="Texture" id=3]
[ext_resource path="res://Layout.gd" type="Script" id=4]
[ext_resource path="res://ScorePopUp.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Main UI/SelectedColor.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72, 228.913 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 54.4517, 200 )

[sub_resource type="StyleBoxFlat" id=3]

[node name="Kid" type="Node2D" groups=[
"Kid",
]]
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, -160 )
shape = SubResource( 1 )

[node name="KidSprite" type="Node2D" parent="KinematicBody2D"]
position = Vector2( 0, 28.5905 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
position = Vector2( 0, -192 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( 0, 32.3969 )
shape = SubResource( 2 )

[node name="Candy Wanted List" type="TextureRect" parent="KinematicBody2D"]
margin_left = -64.0
margin_top = -388.135
margin_right = 64.0
margin_bottom = -116.135
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="KinematicBody2D/Candy Wanted List"]
margin_right = 132.0
margin_bottom = 64.0
mouse_filter = 2
alignment = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row One" parent="KinematicBody2D/Candy Wanted List/Layout" instance=ExtResource( 1 )]
alignment = 1

[node name="Row One2" parent="KinematicBody2D/Candy Wanted List/Layout" instance=ExtResource( 1 )]
margin_top = 68.0
margin_bottom = 132.0
alignment = 1

[node name="Row One3" parent="KinematicBody2D/Candy Wanted List/Layout" instance=ExtResource( 1 )]
margin_top = 136.0
margin_bottom = 200.0
alignment = 1

[node name="Row One4" parent="KinematicBody2D/Candy Wanted List/Layout" instance=ExtResource( 1 )]
margin_top = 204.0
margin_bottom = 268.0

[node name="Tween" type="Tween" parent="."]

[node name="PatienceTimer" type="Timer" parent="."]

[node name="ProgressBarAnim" type="Tween" parent="."]
playback_speed = 2.0
playback/speed = 2.0

[node name="SelectedColor" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.192157 )
margin_left = -88.551
margin_top = -454.112
margin_right = 84.449
margin_bottom = 95.8878
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color( 0.470588, 1, 0.407843, 1 )
self_modulate = Color( 1, 0.996078, 1, 1 )
margin_left = -46.4867
margin_top = -112.413
margin_right = 46.5133
margin_bottom = -98.413
custom_styles/fg = SubResource( 3 )
step = 1.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePopUp" parent="." instance=ExtResource( 5 )]
[connection signal="area_entered" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="mouse_entered" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="PatienceTimer" to="." method="_on_PatienceTimer_timeout"]
